--- a/package.json
+++ b/package.json
@@ -26,7 +26,11 @@
     "help": "nx help"
   },
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@nrwl/nest": "^10.3.1",
+    "@nrwl/next": "^10.3.1",
+    "@nrwl/react": "^10.3.1"
+  },
   "devDependencies": {
     "@nrwl/cli": "10.3.1",
     "@nrwl/nx-cloud": "latest",
