creacion de la libreria de user graphql

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,12 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@headless-digitalpaco/nest/graphql/user": [
+        "libs/nest/graphql/user/src/index.ts"
+      ],
+      "@headless-digitalpaco/user": ["libs/user/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
