--- a/package.json
+++ b/package.json
@@ -27,17 +27,37 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/nest": "^10.3.1",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/graphql": "^7.7.0",
+    "@nestjs/platform-express": "^7.0.0",
     "@nrwl/next": "^10.3.1",
-    "@nrwl/react": "^10.3.1"
+    "@nrwl/react": "^10.3.1",
+    "apollo-server-express": "^2.18.2",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^15.3.0",
+    "graphql-tools": "^6.2.4",
+    "joi": "^17.2.1",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "~6.5.5"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "10.3.1",
+    "@nrwl/eslint-plugin-nx": "10.3.1",
+    "@nrwl/nest": "10.3.1",
+    "@nrwl/node": "10.3.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "10.3.1",
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "~8.9.4",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
+    "eslint-config-prettier": "6.0.0",
     "prettier": "2.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
