--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/graphql": "^7.7.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.4",
     "@nrwl/next": "^10.3.1",
     "@nrwl/react": "^10.3.1",
     "apollo-server-express": "^2.18.2",
@@ -39,8 +40,10 @@
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.4",
     "joi": "^17.2.1",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.5"
+    "rxjs": "~6.5.5",
+    "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
