--- a/package.json
+++ b/package.json
@@ -35,32 +35,52 @@
     "@nestjs/typeorm": "^7.1.4",
     "@nrwl/next": "^10.3.1",
     "@nrwl/react": "^10.3.1",
+    "@zeit/next-stylus": "1.0.1",
     "apollo-server-express": "^2.18.2",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "document-register-element": "1.13.1",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.4",
     "joi": "^17.2.1",
     "mysql": "^2.18.1",
+    "next": "9.5.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-is": "16.13.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
+    "styled-components": "5.1.1",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "10.3.1",
+    "@nrwl/cypress": "10.3.1",
     "@nrwl/eslint-plugin-nx": "10.3.1",
     "@nrwl/nest": "10.3.1",
     "@nrwl/node": "10.3.1",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "10.3.1",
+    "@nrwl/web": "10.3.1",
     "@nrwl/workspace": "10.3.1",
+    "@testing-library/react": "10.4.1",
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "~8.9.4",
+    "@types/react": "16.9.38",
+    "@types/react-dom": "16.9.8",
+    "@types/react-is": "16.7.1",
+    "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "4.3.0",
     "@typescript-eslint/parser": "4.3.0",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "7.10.0",
     "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "prettier": "2.0.4",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
